--- a/index.html
+++ b/index.html
@@ -1,56 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #24292e;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #24292e;
-            color: #fff;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>My GitHub Commit Calendar</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to My GitHub Page</h1>
-    </header>
-    <div class="container">
-        <h1>Hello, World!</h1>
-        <p>This is a simple landing page hosted on GitHub Pages. Feel free to explore my projects and repositories!</p>
+  <!-- Navigation Bar -->
+  <nav>
+    <div class="logo">
+      <a href="#"><img src="assets/logo.png" alt="Logo" /></a>
     </div>
-    <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
-    </footer>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Docs</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <h1>My GitHub Commit Calendar</h1>
+    
+    <!-- Controls to adjust calendar view -->
+    <div id="controls">
+      <button data-weeks="1">1 Week</button>
+      <button data-weeks="4">1 Month</button>
+      <button data-weeks="26">6 Months</button>
+      <button data-weeks="52">1 Year</button>
+    </div>
+    
+    <!-- Calendar Container -->
+    <div id="calendar"></div>
+  </main>
+
+  <!-- JavaScript -->
+  <script src="js/calendar.js"></script>
 </body>
 </html>
